# You may can choose an older version
cmake_minimum_required(VERSION 2.8)
PROJECT( VectorAddition )

FIND_PACKAGE( CUDA REQUIRED )

FILE( GLOB_RECURSE SOURCE_CU "*.cu" )
FILE( GLOB_RECURSE SOURCE_CPP "*.cpp" )

SET( EXEC VecAddApp )
SET( VECADD_CUDA VecAddCuda )

CUDA_ADD_LIBRARY( ${VECADD_CUDA} ${SOURCE_CU} STATIC )
ADD_EXECUTABLE( ${EXEC} ${SOURCE_CPP} ${SOURCE_HPP} )
ADD_DEPENDENCIES( ${EXEC} ${VECADD_CUDA} )
TARGET_LINK_LIBRARIES( ${EXEC} ${VECADD_CUDA} )